--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.iplateia.sori.ExampleApp'
+    namespace 'com.iplateia.sori.example'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.iplateia.sori.ExampleApp"
+        applicationId "com.iplateia.sori.example"
         minSdk 27
         targetSdk 33
         versionCode 1
