--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,13 +10,17 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    
+    env:
+      SORI_APP_ID: ${{ secrets.SORI_APP_ID }}
+      SORI_SECRET_KEY: ${{ secrets.SORI_SECRET_KEY }}
 
     steps:
     - uses: actions/checkout@v3
     - name: set up JDK
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '18'
         distribution: 'temurin'
         cache: gradle
 
