--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,21 +9,33 @@ if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
 
+def localProperties = new Properties()
+def localPropertiesFile = rootProject.file('local.properties')
+if (localPropertiesFile.exists()) {
+    localProperties.load(new FileInputStream(localPropertiesFile))
+}
+
 android {
     namespace 'com.iplateia.sori.example'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.iplateia.sori.example"
-        minSdk 27
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        minSdk 24
+        targetSdk 35
+        versionCode 2
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
         }
+
+        // set SORI_APP_ID and SORI_SECRET_KEY from local.properties
+        def soriAppId = localProperties['SORI_APP_ID']
+        def soriSecretKey = localProperties['SORI_SECRET_KEY']
+        resValue("string", "SORI_APP_ID", soriAppId)
+        resValue("string", "SORI_SECRET_KEY", soriSecretKey)
     }
 
     signingConfigs {
@@ -48,52 +60,33 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
     buildFeatures {
-        compose true
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        viewBinding = true
     }
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
-    sourceSets {
-        main {
-            assets.srcDirs += ['assets'] // <-- add this line to use audiopack assets
-        }
-    }
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.12.0'
-    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
-    implementation 'androidx.activity:activity-compose:1.8.2'
-    implementation platform('androidx.compose:compose-bom:2024.04.00')
-    implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3'
-    implementation "io.coil-kt:coil:2.4.0"
-    implementation "io.coil-kt:coil-compose:2.2.2"
-    implementation 'com.google.code.gson:gson:2.10.1'
-    implementation 'com.google.guava:guava:23.3-android'
-    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
-    implementation 'com.commonsware.cwac:provider:0.5.3'
-    implementation files('libs/sori_sdk.aar')
+    implementation 'androidx.core:core-ktx:1.16.0'
+    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.22')
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.7'
+    implementation 'com.google.guava:guava:33.4.8-android'
+    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation "com.iplateia:sorisdk:4.1.6"
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.8.9'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.9'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2024.04.00')
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 }
