--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,73 +2,36 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MICROPHONE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:allowBackup="true"
-        android:requestLegacyExternalStorage="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SORIExample"
+        android:theme="@style/Theme.Sorisdk"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.SORIExample">
+            android:theme="@style/Theme.Sorisdk">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <provider
-            android:name="com.commonsware.cwac.provider.StreamProvider"
-            android:authorities="${packageName}.fileprovider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="com.commonsware.cwac.provider.STREAM_PROVIDER_PATHS"
-                android:resource="@xml/filepaths" />
-        </provider>
-        <provider
-            android:name="androidx.core.content.FileProvider"
-            android:authorities="${packageName}.cacheprovider"
-            android:exported="false"
-            android:grantUriPermissions="true"
-            tools:replace="android:authorities">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/cachepaths"
-                tools:replace="android:resource" />
-        </provider>
         <service
-            android:name="com.iplateia.afplib.DetectorService"
+            android:name="com.iplateia.sorisdk.SORIAudioRecognitionService"
             android:exported="false"
-            android:permission="com.iplateia.sori.example.permission.SORI.DETECT"
-            android:process=":remote" />
-        <service
-            android:name="com.iplateia.sori.example.RecognitionService"
-            android:enabled="true"
-            android:exported="false" />
-    </application>
-    <permission
-        android:name="com.iplateia.sori.example.permission.SORI.DETECT"
-        android:protectionLevel="signature" />
-    <uses-permission android:name="com.iplateia.sori.example.permission.SORI.DETECT" />
-    <permission
-        android:name="com.iplateia.sori.example.permission.SORI.BIND"
-        android:protectionLevel="signature" />
-    <uses-permission android:name="com.iplateia.sori.example.permission.SORI.BIND" />
-    <permission
-        android:name="com.iplateia.sori.example.permission.SORI.BROADCAST"
-        android:protectionLevel="signature" />
-    <uses-permission android:name="com.iplateia.sori.example.permission.SORI.BROADCAST" />
+            android:foregroundServiceType="microphone" />
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    </application>
 </manifest>
