--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,12 @@
 pluginManagement {
     repositories {
-        google()
+        google {
+            content {
+                includeGroupByRegex("com\\.android.*")
+                includeGroupByRegex("com\\.google.*")
+                includeGroupByRegex("androidx.*")
+            }
+        }
         mavenCentral()
         gradlePluginPortal()
     }
@@ -10,9 +16,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        maven {
-            url "https://s3.amazonaws.com/repo.commonsware.com"
-        }
+        maven { url "https://maven.iplateia.com/sorisdk" }
     }
 }
 rootProject.name = "SORI Example"
